// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PositioningPopup /> renders correctly with arrow 1`] = `
<PositioningPopup
  withArrow={true}
>
  <div
    className="popup-wrap"
    style={
      Object {
        "left": -120,
        "top": "100%",
      }
    }
  >
    <PopupArrow
      className="arrow-base"
      color="white"
      direction="top"
      position={
        Object {
          "left": 75,
        }
      }
      shadow={true}
    >
      <span
        className="base white arrow-base top shadow shadow-top"
        style={
          Object {
            "left": 75,
          }
        }
      />
    </PopupArrow>
    <ForwardRef(Popup)>
      <div
        className="popup"
      />
    </ForwardRef(Popup)>
  </div>
</PositioningPopup>
`;

exports[`<PositioningPopup /> renders correctly without props 1`] = `
<PositioningPopup>
  <div
    className="popup-wrap"
    style={
      Object {
        "left": -120,
        "top": "100%",
      }
    }
  >
    <ForwardRef(Popup)>
      <div
        className="popup"
      />
    </ForwardRef(Popup)>
  </div>
</PositioningPopup>
`;
